Fix YouTube iframes overflowing screen on mobile

--- a/wp-content/themes/salsa-siempre/scss/_post.scss
+++ b/wp-content/themes/salsa-siempre/scss/_post.scss
@@ -56,4 +56,7 @@
 	& p {
 		margin: 1em 0 0;
 	}
+	& iframe { // YT videos
+		width: 100%;
+	}
 }
